--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,52 @@
 
             </build>
         </profile>
+
+        <profile>
+            <id>release-tubemogul</id>
+            <build>
+                <plugins>
+                    <!-- To generate javadoc -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.4</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>tubemogul</id>
+                    <url>https://artifactory.tubemogul.com/ext-snapshot-local</url>
+                </snapshotRepository>
+                <repository>
+                    <id>tubemogul</id>
+                    <url>https://artifactory.tubemogul.com/ext-release-local</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+
     </profiles>
 
     <build>
